add allowed fronturls